objects/ASI_CRM_Regular_Supplier__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>ASI_MFM_Brand__c</referenceTo>
        <relationshipLabel>Regular Suppliers</relationshipLabel>
        <relationshipName>Regular_Suppliers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer_Code__c</fullName>
        <formula>ASI_CRM_Customer__r.ASI_CRM_CN_CRM_Code__c</formula>
        <label>Customer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Regular Suppliers</relationshipLabel>
        <relationshipName>Regular_Suppliers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Supplier_CRM_Code__c</fullName>
        <formula>ASI_CRM_Supplier__r.ASI_CRM_CN_CRM_Code__c</formula>
        <label>Supplier CRM Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>JP Wholesaler, JP Bar Supplier, JP Off-Trade Outlet</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.ASI_CRM_CN_Inactive_Flag__c</field>
                <operation>notEqual</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Regular Customers (Supplier View)</relationshipLabel>
        <relationshipName>Regular_Suppliers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Regular Supplier</label>
    <nameField>
        <displayFormat>RSP{00000000}</displayFormat>
        <label>Regular Supplier ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Regular Suppliers</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_JP_Regular_Supplier</fullName>
        <active>true</active>
        <label>JP Regular Supplier</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>